# aspen-renderer

./: Cargo.toml  README.md  runtime_shader_ex.rs  triangle_1_0.rs
src/: lib.rs
src/canvas/: mod.rs
src/drawable/: mod.rs
src/pipeline/: mod.rs
src/render_path/: mod.rs
src/render_system/: mod.rs
src/rendergraph/: mod.rs
src/renderpass/: mod.rs
src/renderscript/: mod.rs
src/shaders/test-compute/: compile.bat  t1.comp
src/shaders/triangle/: compile.bat  triangle.frag  triangle.vert  triangle.vert.spv
src/submit_system/: mod.rs
src/window_surface/: mod.rs
test/: main.rs
test/passes/: circles.rs  mod.rs  present.rs  window_blit.rs
test/render/: mod.rs
