[package]
name = "aspen-renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rendering library for the Aspen engine"
documentation = "https://docs.rs/aspen-renderer"
repository = "https://github.com/ZakGoedegebuur/aspen-renderer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
