[package]
name = "aspen-renderer"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "Rendering library for the Aspen engine"
documentation = "https://docs.rs/aspen-renderer"
repository = "https://github.com/ZakGoedegebuur/aspen-renderer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aspen-loader = "0.1.1"
slotmap = "1.0.7"
vulkano = { version = "0.34.1" }
winit = { version = "0.29.0", features = ["rwh_05"] }

[[test]]
name = "test"
path = "test/main.rs"
harness = false
